Final Mobile non-responsive

--- a/index.html
+++ b/index.html
@@ -7,55 +7,133 @@
     <meta name='description' content="Your first and only stop for waveriding gear. Browse boards, fins, tethers, bags and more, all from local surf shops.">
     <meta name="author" content="Michael Riccio">
     <meta name="keywords" content="surf, surfboard, fin, fins, tether, tethers, waveriding, shop, wax">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <div class="headbar">
-                <img class="logo" src="pics/Barrl.png"></img>
-                <div class="location">
-                    <ul class="location-list"></ul>
-                </div>
-                <div class="social"></div>
-            </div>
-            <div class="promo-search">
-                <p class="heading"></p>
-                <div class="search"></div>
-                <figcaption class="caption"></figcaption>
+            <img class="logo" src="pics/Barrl.png" alt="">
+            <div class="location">
+                <ul class="location-list">
+                    <li class="top-list li s">SEARCH</li>
+                    <li class="top-list li b">BOARDS</li>
+                    <li class="top-list li m">MEDIA</li>
+                    <li class="top-list li g">GOALS</li>
+                    <li class="top-list li c">CUSTOMER</li>
+                </ul>
             </div>
         </header>
         <main>
+            <div class="promo-search">
+                <div class="heading-wrapper">
+                    <p class="heading">
+                        Find the board made for you
+                    </p> 
+                </div>
+                <div class="search">
+                    <input type="text" placeholder="search" aria-label="search">
+                    <button><img src="pics/glass.png"></button>
+                </div>
+            </div>
             <div class="board">
-                <div class="board-selector"></div>
+                <div class="board-selector">
+                    <div class = "option1 tab">LOCAL</div>
+                    <div class = "option2 tab">NEW</div>
+                    <div class = "option3 tab">DEALS</div>
+                </div>
                 <div class="board-screen">
-                    <div class="board-local"></div>
-                    <div class="board-new"></div>
-                    <div class="board-deals"></div>
+                    <div class="board-local here">
+                        <div class="board-item"><a href="" ><img src="pics/local (1).jpeg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/local (1).jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/local (1).png" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/local (2).jpeg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/local (2).jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/local (2).png" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/local (3).jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/local (4).jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/local (5).jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/local (6).jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/local (7).jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/local (8).jpg" alt="Board"></a></div>
+                    </div>
+                    <div class="board-new hid"><a> href="" 
+                        <div class="board-item"><a href="" ><img src="pics/new.jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/new2.jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/new3.jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/new4.jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/new5.png" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/new6.png" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/new7.jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/new8.jpeg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/new9.png" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/new10.png" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/new11.png" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/new12.png" alt="Board"></a></div>
+                    </div>
+                    <div class="board-deals hid"> href="" 
+                        <div class="board-item"><a href="" ><img src="pics/deal1.jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/deal2.png" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/deal3.png" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/deal4.png" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/deal5.jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/deal6.jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/deal7.jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/deal8.jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/deal9.jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/deal10.jpg" alt="Board"</a></div>
+                        <div class="board-item"><a href="" ><img src="pics/deal11.jpg" alt="Board"></a></div>
+                        <div class="board-item"><a href="" ><img src="pics/deal12.jpg" alt="Board"></a></div>
+                    </div>
                 </div>
             </div>
             <div class="media"></div>
             <div class="goals">
-                <h2>What we're about</h2>
-                <hr>
-                <p>At Barrl we want to give surfers the best shopping experience by combinging the ease of online shopping with the personal touch of local surfshops. Barrl partners with local surfshops along the east coast to make sure you can support your local scene.</p>
+                <div class="goals-contain">
+                    <h2>What we're about</h2>
+                    <div>At Barrl we want to give surfers the best shopping experience by combinging the ease of online shopping with the personal touch of local surfshops. Barrl partners with businesses along the east coast to make sure you can get the best deals while supporting your local scene. Boards crafted by our partners have carved it up with the best. From Grom Tour to your local spot you can find professionals and casuals alike, hitting the waves with boards from Barrl.</div>
+                </div>
             </div>
             <div class="customer">
-                <div class="customer-option">questions</div>
-                <div class="customer-option">feedback</div>
-                <div class="customer-option">newsletter</div>
+                <a href="">
+                    <div class="customer-option">
+                        <h3>Questions</h3>
+                        <h5>Do you have questions about how Barrl does what it does? Do you wonder if we stay up at night, thinking about the length and density of our boards, while our hands autonomously create logistics spreadsheets. This is the page for you.</h5>
+                    </div> 
+                </a>
+                <a href="">
+                    <div class="customer-option">
+                        <h3>Deliveries</h3>
+                        <h5>Have an issue with your delivery? Let us know, we're here to help. Hours are Monday to Friday, 8am to 4pm. Click here for customer service number and email address. </h5>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="customer-option">
+                        <h3>newsletter</h3>
+                        <h5> Stories, interviews, great surfspots, and killer pics. All this and more in our weekly newsletter 'In The Barrl'. We want to hear from you! Send us your favorite moments with your Barrl board? We'll pick a hefty handful to put in our weekly newsletter. Sign up here.</h5>
+                    </div>
+                </a>
+                <a class="bottom" href="">
+                    <div class="customer-option">
+                        <h3>Feedback</h3>
+                        <h5>We at Barrl are always improving ourselves, and listening to what our you have to say is a big part of this. We are looking to make you a happy customer so let us know. The good, the bad, the weird, how can we make your Barrl experience as simple and streamlined as possible?</h5>
+                    </div>
+                </a>
             </div>
         </main>
         <footer>
+            <ul class="social">
+                <li><a href="https://www.facebook.com/michael.riccio.5205"><img src="pics/facebook.png" class=" fa-facebook-square pic"></img></a></li>
+                <li><a href="https://github.com/michaelriccio/Michael-Riccio"><img src="pics/github.png" class=" fa-github-square pic"></img></a></li>
+                <li><a href="https://www.linkedin.com/in/michael-riccio-0241981a8/"><img src="pics/linked-in.png" class=" fa-linkedin pic"></img></a></li>
+                <li><a href="michaelriccio25@gmail.com"><img src="pics/email.png" class=" fa-envelope pic"></img></a></li>
+            </ul>
             <p>Copyright © Michael Riccio</p>
             <div class="contact">
-                <div class="social">
-                    <!-- put social media here-->
-                </div>
             </div>
         </footer>
+        <a class="help">Help</a>
     </div>
-    <p class="help">Help</p>
-<script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
