Moving javascript variables

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <body>
     <div class="container">
         <header>
+            <div class="progress">
+                <div class="progress-info" id="progress-bar"></div>
+            </div>
             <img class="logo" src="pics/Barrl.png" alt="">
             <div class="location">
                 <ul class="location-list">
