Final Version Done

--- a/index.html
+++ b/index.html
@@ -17,16 +17,26 @@
             <div class="progress">
                 <div class="progress-info" id="progress-bar"></div>
             </div>
-            <img class="logo" src="pics/Barrl.png" alt="">
-            <div class="location">
-                <ul class="location-list">
-                    <li class="top-list s">SEARCH</li>
-                    <li class="top-list b">BOARDS</li>
-                    <li class="top-list m">MEDIA</li>
-                    <li class="top-list g">GOALS</li>
-                    <li class="top-list c">CUSTOMER</li>
-                </ul>
+            <div class="header-container">
+                <img class="logo" src="pics/Barrl.png" alt="">
+                <div class="location">
+                    <ul class="location-list">
+                        <li class="top-list s">SEARCH</li>
+                        <li class="top-list b">BOARDS</li>
+                        <li class="top-list m">MEDIA</li>
+                        <li class="top-list g">GOALS</li>
+                        <li class="top-list c">CUSTOMER</li>
+                    </ul>
+                </div>
+                    <img src="pics/menu.png" class="menu-icon">
             </div>
+            <ul class="sidebar">
+                <li class="nav"> Seach </li>
+                <li class="nav"> Boards </li>
+                <li class="nav"> Media </li>
+                <li class="nav"> Goals </li>
+                <li class="nav"> Customer</li>
+            </ul>
         </header>
         <main>
             <div class="promo-search">
@@ -42,12 +52,12 @@
             </div>
             <div class="board">
                 <div class="board-selector">
-                    <div class = "bg-active tab">LOCAL</div>
+                    <div class = "tab bg-active">LOCAL</div>
                     <div class = "tab">NEW</div>
                     <div class = "tab">DEALS</div>
                 </div>
                 <div class="board-screen">
-                    <div class="board-local here">
+                    <div class="board-grid here">
                         <div class="board-item"><a href="" ><img src="pics/local (1).jpeg" alt="Board"></a></div>
                         <div class="board-item"><a href="" ><img src="pics/local (1).jpg" alt="Board"></a></div>
                         <div class="board-item"><a href="" ><img src="pics/local (1).png" alt="Board"></a></div>
@@ -61,7 +71,7 @@
                         <div class="board-item"><a href="" ><img src="pics/local (7).jpg" alt="Board"></a></div>
                         <div class="board-item"><a href="" ><img src="pics/local (8).jpg" alt="Board"></a></div>
                     </div>
-                    <div class="board-new hid"><a>
+                    <div class="board-grid">
                         <div class="board-item"><a href="" ><img src="pics/new.jpg" alt="Board"></a></div>
                         <div class="board-item"><a href="" ><img src="pics/new2.jpg" alt="Board"></a></div>
                         <div class="board-item"><a href="" ><img src="pics/new3.jpg" alt="Board"></a></div>
@@ -75,7 +85,7 @@
                         <div class="board-item"><a href="" ><img src="pics/new11.png" alt="Board"></a></div>
                         <div class="board-item"><a href="" ><img src="pics/new12.png" alt="Board"></a></div>
                     </div>
-                    <div class="board-deals hid"> 
+                    <div class="board-grid"> 
                         <div class="board-item"><a href="" ><img src="pics/deal1.jpg" alt="Board"></a></div>
                         <div class="board-item"><a href="" ><img src="pics/deal2.png" alt="Board"></a></div>
                         <div class="board-item"><a href="" ><img src="pics/deal3.png" alt="Board"></a></div>
@@ -85,7 +95,7 @@
                         <div class="board-item"><a href="" ><img src="pics/deal7.jpg" alt="Board"></a></div>
                         <div class="board-item"><a href="" ><img src="pics/deal8.jpg" alt="Board"></a></div>
                         <div class="board-item"><a href="" ><img src="pics/deal9.jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/deal10.jpg" alt="Board"</a></div>
+                        <div class="board-item"><a href="" ><img src="pics/deal10.jpg" alt="Board"></a></div>
                         <div class="board-item"><a href="" ><img src="pics/deal11.jpg" alt="Board"></a></div>
                         <div class="board-item"><a href="" ><img src="pics/deal12.jpg" alt="Board"></a></div>
                     </div>
@@ -104,35 +114,41 @@
             </div>
             <div class="goals">
                 <div class="goals-contain">
-                    <h2>What we're about</h2>
-                    <div>At Barrl we want to give surfers the best shopping experience by combinging the ease of online shopping with the personal touch of local surfshops. Barrl partners with businesses along the east coast to make sure you can get the best deals while supporting your local scene. Boards crafted by our partners have carved it up with the best. From Grom Tour to your local spot you can find professionals and casuals alike, hitting the waves with boards from Barrl.</div>
+                    <div class="goals-wrapper">
+                        <h2>What we're about</h2>
+                        <h4>At Barrl we want to give surfers the best shopping experience by combinging the ease of online shopping with the personal touch of local surfshops. Barrl partners with businesses along the east coast to make sure you can get the best deals while supporting your local scene. Boards crafted by our partners have carved it up with the best. From Grom Tour to your local spot you can find professionals and casuals alike, hitting the waves with boards from Barrl.</h4>
+                    </div>
                 </div>
             </div>
             <div class="customer">
-                <a href="">
-                    <div class="customer-option">
-                        <h3>Questions</h3>
-                        <h5>Do you have questions about how Barrl does what it does? Do you wonder if we stay up at night, thinking about the length and density of our boards, while our hands autonomously create logistics spreadsheets. This is the page for you.</h5>
-                    </div> 
-                </a>
-                <a href="">
-                    <div class="customer-option">
-                        <h3>Deliveries</h3>
-                        <h5>Have an issue with your delivery? Let us know, we're here to help. Hours are Monday to Friday, 8am to 4pm. Click here for customer service number and email address. Our representatives are trained by legendary customer service speaker John Madden himself.</h5>
-                    </div>
-                </a>
-                <a href="">
-                    <div class="customer-option">
-                        <h3>newsletter</h3>
-                        <h5> Stories, interviews, great surfspots, and killer pics. All this and more in our weekly newsletter 'In The Barrl'. We want to hear from you! Send us your favorite moments with your Barrl board? We'll pick a hefty handful to put in our weekly newsletter. Sign up here.</h5>
-                    </div>
-                </a>
-                <a class="bottom" href="">
-                    <div class="customer-option">
-                        <h3>Feedback</h3>
-                        <h5>We at Barrl are always improving ourselves, and listening to what our you have to say is a big part of this. We are looking to make you a happy customer so let us know. The good, the bad, the weird, how can we make your Barrl experience as simple and streamlined as possible?</h5>
-                    </div>
-                </a>
+                <div class="customer-container">
+                    <a href="">
+                        <div class="customer-option">
+                            <h3>Questions</h3>
+                            <h5>Do you have questions about how Barrl does what it does? Do you wonder if we stay up at night, thinking about the length and density of our boards, while our hands autonomously create logistics spreadsheets. This is the page for you.</h5>
+                        </div> 
+                    </a>
+                    <a href="">
+                        <div class="customer-option">
+                            <h3>Deliveries</h3>
+                            <h5>Have an issue with your delivery? Let us know, we're here to help. Hours are Monday to Friday, 8am to 4pm. Click here for customer service number and email address. Our representatives are trained by legendary customer service speaker John Madden himself.</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="customer-container">
+                    <a href="">
+                        <div class="customer-option">
+                            <h3>newsletter</h3>
+                            <h5> Stories, interviews, great surfspots, and killer pics. All this and more in our weekly newsletter 'In The Barrl'. We want to hear from you! Send us your favorite moments with your Barrl board? We'll pick a hefty handful to put in our weekly newsletter. Sign up here.</h5>
+                        </div>
+                    </a>
+                    <a class="bottom" href="">
+                        <div class="customer-option">
+                            <h3>Feedback</h3>
+                            <h5>We at Barrl are always improving ourselves, and listening to what our you have to say is a big part of this. We are looking to make you a happy customer so let us know. The good, the bad, the weird, how can we make your Barrl experience as simple and streamlined as possible?</h5>
+                        </div>
+                    </a>
+                </div>
             </div>
         </main>
         <footer>
