--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
                 <img class="logo" src="pics/Barrl.png" alt="">
                 <div class="location">
                     <ul class="location-list">
-                        <li class="top-list s">SEARCH</li>
+                        <!-- <li class="top-list s">SEARCH</li>
                         <li class="top-list b">BOARDS</li>
                         <li class="top-list m">MEDIA</li>
                         <li class="top-list g">GOALS</li>
-                        <li class="top-list c">CUSTOMER</li>
+                        <li class="top-list c">CUSTOMER</li> -->
                     </ul>
                 </div>
                     <img src="pics/menu.png" class="menu-icon">
             </div>
             <ul class="sidebar">
-                <li class="nav"> Seach </li>
+                <!-- <li class="nav"> Seach </li>
                 <li class="nav"> Boards </li>
                 <li class="nav"> Media </li>
                 <li class="nav"> Goals </li>
-                <li class="nav"> Customer</li>
+                <li class="nav"> Customer</li> -->
             </ul>
         </header>
         <main>
-            <div class="promo-search">
+            <div class="search">
                 <div class="heading-wrapper">
                     <p class="heading">
                         Find the board made for you
                     </p> 
                 </div>
-                <div class="search">
+                <div class="promo-search">
                     <input type="text" placeholder="search" aria-label="search">
                     <button><img src="pics/glass.png"></button>
                 </div>
