--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="promo-search">
                     <input type="text" placeholder="search" aria-label="search">
-                    <button><img src="pics/glass.png"></button>
+                    <button onclick="alertReminder()"><img src="pics/glass.png"></button>
                 </div>
             </div>
             <div class="board">
@@ -58,46 +58,46 @@
                 </div>
                 <div class="board-screen">
                     <div class="board-grid here">
-                        <div class="board-item"><a href="" ><img src="pics/local (1).jpeg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/local (1).jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/local (1).png" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/local (2).jpeg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/local (2).jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/local (2).png" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/local (3).jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/local (4).jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/local (5).jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/local (6).jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/local (7).jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/local (8).jpg" alt="Board"></a></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/local (1).jpeg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/local (1).jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/local (1).png" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/local (2).jpeg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/local (2).jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/local (2).png" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/local (3).jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/local (4).jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/local (5).jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/local (6).jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/local (7).jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/local (8).jpg" alt="Board" ></div></div>
                     </div>
                     <div class="board-grid">
-                        <div class="board-item"><a href="" ><img src="pics/new.jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/new2.jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/new3.jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/new4.jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/new5.png" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/new6.png" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/new7.jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/new8.jpeg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/new9.png" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/new10.png" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/new11.png" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/new12.png" alt="Board"></a></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/new.jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/new2.jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/new3.jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/new4.jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/new5.png" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/new6.png" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/new7.jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/new8.jpeg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/new9.png" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/new10.png" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/new11.png" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/new12.png" alt="Board" ></div></div>
                     </div>
                     <div class="board-grid"> 
-                        <div class="board-item"><a href="" ><img src="pics/deal1.jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/deal2.png" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/deal3.png" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/deal4.png" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/deal5.jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/deal6.jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/deal7.jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/deal8.jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/deal9.jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/deal10.jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/deal11.jpg" alt="Board"></a></div>
-                        <div class="board-item"><a href="" ><img src="pics/deal12.jpg" alt="Board"></a></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/deal1.jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/deal2.png" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/deal3.png" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/deal4.png" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/deal5.jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/deal6.jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/deal7.jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/deal8.jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/deal9.jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/deal10.jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/deal11.jpg" alt="Board" ></div></div>
+                        <div class="board-item" onclick="alertReminder()"><div> <img src="pics/deal12.jpg" alt="Board" ></div></div>
                     </div>
                 </div>
             </div>
